Fix the spacing of recent card

--- a/src/pages/student/main/Dashboard/components/Recent/index.module.css
+++ b/src/pages/student/main/Dashboard/components/Recent/index.module.css
@@ -4,8 +4,7 @@
 
 .ConCard{
     display: grid;
-    grid-template-columns: 361px;
-    grid-column-gap: 48px;
+    grid-template-columns: 345px;
 }
 
 .forContainerBar {
