--- a/src/pages/student/main/Dashboard/index.module.css
+++ b/src/pages/student/main/Dashboard/index.module.css
@@ -1,3 +1,7 @@
+.bg{
+    display: inline-flex;
+    grid-column-gap: 22px;
+}
 .bg2 {
     column-gap: 48px;
 }
